# booking_service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py
app/api/: auth.py  bookings.py  rooms.py
tests/: conftest.py  test_auth.py
