[tool.poetry]
name = 'booking-service'
version = '0.1.0'
description = 'Сервис бронирования переговорных комнат в коворкинге'
authors = ['Nikita Neupokoev <n.neupokoev154@yandex.ru>']
license = 'MIT'
package-mode = false

[tool.poetry.dependencies]
python = '^3.11'
fastapi = '^0.111.0'
uvicorn = {extras = ['standard'], version = '^0.30.1'}
sqlalchemy = '^2.0.31'
asyncpg = '^0.29.0'
pyjwt = '^2.8.0'
pydantic = {extras = ['email'], version = '^2.7.4'}
pydantic-settings = '^2.3.4'
python-multipart = '^0.0.9'
bcrypt = '^4.1.3'

[tool.poetry.group.dev.dependencies]
pytest = '^8.2.2'
pytest-asyncio = '^0.23.7'
httpx = '^0.27.0'
ruff = "^0.15.20"

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.pytest.ini_options]
asyncio_mode = 'auto'
asyncio_default_fixture_loop_scope = 'function'
